add predicate in class service