@@ -3,23 +3,21 @@ package com.example.demo.domains.classes;
 
 import com.blazebit.persistence.CriteriaBuilderFactory;
 import com.blazebit.persistence.PagedList;
+import com.example.demo.domains.classes.dtos.ClassRequest;
 import com.example.demo.domains.classes.dtos.ClassResponse;
 import com.example.demo.domains.teachers.TeacherEntity;
 import com.example.demo.domains.teachers.TeacherMapper;
-import javax.persistence.*;
+import com.example.demo.domains.teachers.dtos.TeacherResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.math3.util.MathArrays;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
+import javax.persistence.EntityManager;
+import javax.persistence.PersistenceContext;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -32,28 +30,31 @@ public class ClassService {
     @PersistenceContext
     private EntityManager entityManager;
 
-    public Page<ClassResponse> getAllClasses(Pageable pageable) {
+    public Page<ClassResponse> get(ClassRequest request, Pageable pageable) {
         var query = criteriaBuilderFactory.create(entityManager, ClassEntity.class, "cls");
+        var teacherQuery = criteriaBuilderFactory.create(entityManager, TeacherEntity.class, "tch");
 
-        for (Sort.Order order : pageable.getSort()) {
-            String property = order.getProperty();
-            if (order.isAscending()) {
-                query.orderByAsc("cls." + property);
-            } else {
-                query.orderByDesc("cls." + property);
-            }
-        }
+        PagedList<ClassEntity> classes = request.toPredicate(query)
+                .orderByAsc("cls.classId")
+                .page(pageable.getPageNumber(), pageable.getPageSize())
+                .getResultList();
 
-        if (pageable.getSort().isEmpty()) {
-            query.orderByAsc("cls.classId");
-        }
+        List<TeacherEntity> teachers = teacherQuery
+                .where("tch.teacherId").in(classes.stream().map(ClassEntity::getTeacherId).toList())
+                .getResultList();
 
-        PagedList<ClassEntity> classes = query.page(pageable.getPageNumber(), pageable.getPageSize()).getResultList();
         List<ClassResponse> classResponses = classes.stream()
-                .map(classMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(classEntity -> {
+                    TeacherEntity teacher = teachers.stream()
+                            .filter(teacherEntity -> teacherEntity.getTeacherId().equals(classEntity.getTeacherId()))
+                            .findAny().orElse(null);
+                    ClassResponse classResponse = classMapper.toResponse(classEntity);
+                    TeacherResponse teacherResponse = teacher != null ? teacherMapper.toResponse(teacher) : null;
+                    classResponse.setTeacher(teacherResponse);
+                    return classResponse;
+                })
+                .toList();
 
-        // Tạo PagedList mới với ClassResponse
         return new PageImpl<>(classResponses, pageable, classes.getTotalSize());
     }
 }
